--- a/MusicAppLayout/Storyboards/Player.storyboard
+++ b/MusicAppLayout/Storyboards/Player.storyboard
@@ -189,24 +189,23 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="V91-ZQ-n9S">
                                 <rect key="frame" x="20" y="82" width="374" height="211"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="queue-cell" rowHeight="84" id="dSq-5q-CXh" customClass="QueueCell" customModule="MusicAppLayout" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="374" height="84"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="queue-cell" rowHeight="59" id="dSq-5q-CXh" customClass="QueueCell" customModule="MusicAppLayout" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="374" height="59"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dSq-5q-CXh" id="wqP-wT-kBY">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="84"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="59"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="73d-Us-zEb">
-                                                    <rect key="frame" x="20" y="21" width="50" height="42"/>
+                                                    <rect key="frame" x="20" y="11" width="50" height="37"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="1tx-gR-3Jj"/>
                                                         <constraint firstAttribute="width" constant="50" id="lrc-NK-scu"/>
                                                     </constraints>
                                                 </imageView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kpu-Mr-POp">
-                                                    <rect key="frame" x="78" y="21" width="41.5" height="35.5"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kpu-Mr-POp">
+                                                    <rect key="frame" x="80" y="12" width="41.5" height="35.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iKf-3N-qjG">
                                                             <rect key="frame" x="0.0" y="0.0" width="41.5" height="19.5"/>
@@ -223,7 +222,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QBF-lC-FBw">
-                                                    <rect key="frame" x="349" y="30" width="25" height="24"/>
+                                                    <rect key="frame" x="349" y="17.5" width="25" height="24"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="25" id="FPf-ec-pJA"/>
                                                         <constraint firstAttribute="height" constant="24" id="JEj-LC-GEi"/>
@@ -236,10 +235,12 @@
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="73d-Us-zEb" secondAttribute="bottom" constant="10" id="6gL-1B-n0C"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="73d-Us-zEb" secondAttribute="bottom" id="6gL-1B-n0C"/>
                                                 <constraint firstItem="73d-Us-zEb" firstAttribute="leading" secondItem="wqP-wT-kBY" secondAttribute="leadingMargin" id="DsR-g8-VnX"/>
+                                                <constraint firstItem="kpu-Mr-POp" firstAttribute="leading" secondItem="73d-Us-zEb" secondAttribute="trailing" constant="10" id="F1S-yH-5mE"/>
+                                                <constraint firstItem="kpu-Mr-POp" firstAttribute="centerY" secondItem="wqP-wT-kBY" secondAttribute="centerY" id="MiI-XI-xIr"/>
                                                 <constraint firstItem="QBF-lC-FBw" firstAttribute="centerY" secondItem="wqP-wT-kBY" secondAttribute="centerY" id="PL6-Ce-17F"/>
-                                                <constraint firstItem="73d-Us-zEb" firstAttribute="top" secondItem="wqP-wT-kBY" secondAttribute="topMargin" constant="10" id="QX5-bd-vDe"/>
+                                                <constraint firstItem="73d-Us-zEb" firstAttribute="top" secondItem="wqP-wT-kBY" secondAttribute="topMargin" id="QX5-bd-vDe"/>
                                                 <constraint firstAttribute="trailing" secondItem="QBF-lC-FBw" secondAttribute="trailing" id="VjP-xx-0Fp"/>
                                             </constraints>
                                         </tableViewCellContentView>
